crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_event_warning.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: event
---
{
  "ts": "2024-06-15T12:30:00Z",
  "type": "warning",
  "message": "approaching budget limit: $4.80 of $5.00 used"
}
