crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_minimal_work_order.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: wo
---
{
  "id": "00000000-0000-0000-0000-000000000000",
  "task": "",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "pass_through",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": null,
    "vendor": {},
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
