crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_validation_empty_backend.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: err.to_string()
---
backend.id must not be empty
