crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_validation_invalid_hash.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: err.to_string()
---
hash mismatch: expected abc123def456, got 000000000000
