crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_validation_invalid_outcome.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: err.to_string()
---
invalid outcome: started_at is after finished_at
