crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_validation_missing_field.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: err.to_string()
---
missing required field: backend.id
